--- a/django/myapp/templates/base.html
+++ b/django/myapp/templates/base.html
@@ -186,6 +186,22 @@
     </footer>
 
     <!-- Insert JavaScript files here -->
+    <h1>API Data</h1>
+    {% if data.results %}
+        <ul>
+            {% for city in data.results %}
+                <li>
+                    <strong>{{ city.name }}</strong><br>
+                    Continent: {{ city.continent }}<br>
+                    Native Language: {{ city.nativeLanguage }}<br>
+                    Coordinates: {{ city.coordinates }}<br>
+                    <!-- Add other fields as needed -->
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>Error: {{ data.error }}</p>
+    {% endif %}
 </body>
 
 </html>
